src/objects/APTS_Billing_Settings__c.object
<CustomObject>
    <description>To be used to enable setting up and storing Billing/Invoicing preferences, Payment Terms/Methods</description>
    <fields>
        <fullName>APTS_AgreementExtId__c</fullName>
        <externalId>true</externalId>
        <label>Agreement External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Billing_Type__c</fullName>
        <label>Agreement Billing Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                    <label>Machine &amp; Services</label>
                </value>
                <value>
                    <fullName>Accountcheck</fullName>
                    <isActive>false</isActive>
                    <label>Accountcheck</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Agreement_ID__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Billing Settings</relationshipLabel>
        <relationshipName>Billing_Settings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Language__c</fullName>
        <formula>TEXT(APTS_Agreement_ID__r.APTS_Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_To_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill-To ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Settings</relationshipLabel>
        <relationshipName>Billing_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Cycle_Start_Translated__c</fullName>
        <label>Machine Billing Cycle Start Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Cycle_Start__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Machine&quot;), TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingCycleStart__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Billing Cycle Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Day_Of_Month_Translated__c</fullName>
        <label>Machine Billing Day Of Month Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Day_Of_Month__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Machine&quot;), TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingDayOfMonth2__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Billing Day Of Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Interval_Translated__c</fullName>
        <label>Machine Billing Interval Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Interval__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Machine&quot;), TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingInterval__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Billing Interval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Preference_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.APTS_Sales_Organization__c</field>
                <operation>equals</operation>
                <valueField>Apttus_Config2__BillingPreference__c.APTS_SalesOrg__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Billing Settings</relationshipLabel>
        <relationshipName>Billing_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Rule_Contract__c</fullName>
        <label>Billing Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill in Advance</fullName>
                </value>
                <value>
                    <fullName>Bill in Arrears</fullName>
                </value>
                <value>
                    <fullName>Bill on Ready for Billing Date</fullName>
                    <isActive>false</isActive>
                    <label>Bill on Ready for Billing Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Billing_Rule_Translated__c</fullName>
        <label>Machine Billing Rule Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Type_Translated__c</fullName>
        <label>Billing Type Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Cycle_Start_Trans__c</fullName>
        <label>Ingredient Bill Cycle Start Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Day_Of_Month_Trans__c</fullName>
        <label>Ingredient Bill Day Of Month Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bill_Interval_Translated__c</fullName>
        <label>Ingredient Billing Interval Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Billing_Cycle_Start__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Ingredients&quot;), TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingCycleStart__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Billing Cycle Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Billing_Day_Of_Month__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Ingredients&quot;),  TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingDayOfMonth2__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Billing Day Of Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Billing_Interval__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Agreement_Billing_Type__c, &quot;Ingredients&quot;), TEXT(APTS_Billing_Preference_Setting__r.Apttus_Config2__BillingInterval__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Billing Interval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Invoice_Delivery_Preference__c</fullName>
        <label>Invoice Delivery Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P001</fullName>
                    <label>Print</label>
                </value>
                <value>
                    <fullName>P002</fullName>
                    <label>E-Mail</label>
                </value>
                <value>
                    <fullName>P003</fullName>
                    <label>EDI</label>
                </value>
                <value>
                    <fullName>P004</fullName>
                    <label>Customer Portal</label>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                    <isActive>false</isActive>
                    <label>3rd Party</label>
                </value>
                <value>
                    <fullName>P008</fullName>
                    <isActive>false</isActive>
                    <label>Cust. Portal summary</label>
                </value>
                <value>
                    <fullName>P006</fullName>
                    <isActive>false</isActive>
                    <label>E-mail with summary</label>
                </value>
                <value>
                    <fullName>P007</fullName>
                    <isActive>false</isActive>
                    <label>EDI with summary</label>
                </value>
                <value>
                    <fullName>MyServices (Digital)</fullName>
                    <isActive>false</isActive>
                    <label>MyServices (Digital)</label>
                </value>
                <value>
                    <fullName>Paper</fullName>
                    <isActive>false</isActive>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>P005</fullName>
                    <isActive>false</isActive>
                    <label>Print with summary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice List – With Summary Page</fullName>
                </value>
                <value>
                    <fullName>Invoice List – Without Summary Page</fullName>
                </value>
                <value>
                    <fullName>Collective Invoice</fullName>
                </value>
                <value>
                    <fullName>Collective Invoice – With Summary Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Invoice_del_pref_translated__c</fullName>
        <label>Invoice del pref translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method_Name__c</fullName>
        <formula>APTS_Payment_Method__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>APTS_Payment_Method__c.APTS_Sales_Org__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Sales_Organization__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Payment_Method__c</referenceTo>
        <relationshipLabel>Billing Settings</relationshipLabel>
        <relationshipName>Billing_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Term_Name__c</fullName>
        <formula>APTS_Payment_Term_Setting__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Term_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Apttus_Config2__PaymentTerm__c.APTS_Sales_Org_Text__c</field>
                <operation>contains</operation>
                <valueField>$Source.APTS_Sales_Organization__c</valueField>
            </filterItems>
            <filterItems>
                <field>Apttus_Config2__PaymentTerm__c.APTS_Legacy__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Billing Settings</relationshipLabel>
        <relationshipName>Billing_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_SalesOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Billing Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Billing_Rule_for_consumption_model</fullName>
        <active>true</active>
        <errorConditionFormula>AND(APTS_Agreement_ID__r.RecordType.DeveloperName = &apos;Consumption&apos;, NOT(ISPICKVAL( APTS_Billing_Rule_Contract__c,&apos;Bill in Arrears&apos;)))</errorConditionFormula>
        <errorDisplayField>APTS_Billing_Rule_Contract__c</errorDisplayField>
        <errorMessage>Billing rule should be Bill in Arrears for consumption type contract</errorMessage>
    </validationRules>
</CustomObject>